# csv2pg

./: .gitignore  LICENSE  README.md  db.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
tests/: test_db.py  test_file.py  test_main.py
utils/: cli.py  db.py  file.py
